# amazon-sagemaker-mlops-with-featurestore-and-datawrangler

./: .gitignore  README.md  app.py  cdk.json  direct_deploy.py  pyproject.toml  requirements.txt
demo-workspace/: DataScientist-00-DataDownload.ipynb  DataScientist-01-FeatureEng.ipynb  DataScientist-02-ModelBuilding.ipynb  DataScientist.ipynb  README.md  WalkThrough.ipynb
demo-workspace/feature_engineering/: claims.fg.json  claims.flow  claims_flow_template  customers.fg.json  customers.flow  customers_flow_template
demo-workspace/scripts/: create_dataset.py  xgboost_starter_script.py
demo-workspace/tensorflow/: tensorflow_starter_script.py  tf.pipeline.json  tf_pipeline.py
demo-workspace/utils/: create_dataset.py  feature_store_utils.py  get_datasets.py
infra/: cicd_construct.py  mlops_featurestore_construct.py  service_catalog_stack.py  service_catalog_stack_no_artifacts.py  utils.py
lambdas/functions/auto_approval/: lambda.py
lambdas/functions/clone_seeds/: lambda_main.py
lambdas/functions/role_name/: lambda_main.py
lambdas/layers/: layers.md
repos/build_pipeline/: .gitignore  README.md  app.py  cdk.json  pyproject.toml  requirements.txt
repos/build_pipeline/configurations/: xgboost.pipeline.json
repos/build_pipeline/infra/: build_model_stack.py  sm_pipeline_utils.py
repos/build_pipeline/lambdas/extract_metrics/: extract_metrics.py
repos/build_pipeline/pipelines/: xgboost_pipeline.py
repos/build_pipeline/scripts/: create_dataset.py  xgboost_starter_script.py
repos/features_ingestion_pipeline/: README.md  app.py  cdk.json  pyproject.toml  requirements.txt  setup.py
repos/features_ingestion_pipeline/configurations/: claims.fg.json  claims.flow  claims.pipeline.json  customers.fg.json  customers.flow  customers.pipeline.json
repos/features_ingestion_pipeline/infra/: feature_store_utils.py  features_ingestion_stack.py
repos/features_ingestion_pipeline/pipelines/: claims.flow  feature_ingestion_pipeline.py  parse_flow.py
repos/serving/: .gitignore  app.py  cdk.json  pyproject.toml  requirements.txt
repos/serving/configurations/: xgboost.model.json
repos/serving/infra/: batch_transform_construct.py  dynamodb_construct.py  model_endpoint_construct.py  redeploy_construct.py  serving_stack.py  serving_stack_utils.py
repos/serving/lambdas/functions/: lambda_functions.md
repos/serving/lambdas/functions/datafreshness-check/: lambda_function.py
repos/serving/lambdas/functions/execute-state-machine/: lambda_function.py
repos/serving/lambdas/functions/processing-job-execution/: lambda_function.py
repos/serving/lambdas/functions/processing-job-status-check/: lambda_function.py
repos/serving/lambdas/functions/read-ddb/: lambda_function.py
repos/serving/lambdas/functions/read-sm/: lambda_function.py
repos/serving/lambdas/functions/xgboost_inference/: lambda_function.py
repos/serving/pipelines/: batch_transform_serving_pipeline.py
repos/serving/scripts/: create_dataset.py
repos/serving/scripts/glue/: load-ddb-table.py
