[tool.poetry]
name = "features_ingestion_pipeline"
version = "0.1.0"
description = "Create the feature groups in SageMaker FeatureStore and create a SageMaker pipeline to populate the FG."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">3.8, <3.10"
aws-cdk-lib = "^2.0.0rc1"
constructs = "^10.0.0"
sagemaker = "^2.72.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
