[tool.poetry]
name = "BatchTransformServing"
version = "0.1.0"
description = "Create the feature groups in SageMaker FeatureStore and create a SageMaker pipeline to populate the FG."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
"aws-cdk.aws-sagemaker" = "^1.119.0"
"aws-cdk.aws-iam" = "^1.120.0"
"aws-cdk.aws-s3" = "^1.119.0"
sagemaker = "^2.54.0"
"aws-cdk.aws-s3-assets" = "^1.119.0"
"aws-cdk.aws-dynamodb" = "^1.121.0"
"aws-cdk.aws-lambda-python" = "^1.120.0"
"aws-cdk.aws-glue" = "^1.120.0"
"aws-cdk.aws-apigateway" = "^1.120.0"
"aws-cdk.aws-stepfunctions" = "^1.120.0"
"aws-cdk.aws-stepfunctions-tasks" = "^1.120.0"
"aws-cdk.aws-sqs" = "^1.120.0"
"aws-cdk.aws-lambda-event-sources" = "^1.121.0"
"aws-cdk.aws-codepipeline" = "^1.121.0"
"aws-cdk.aws-events-targets" = "^1.121.0"
"aws-cdk.aws-s3-deployment" = "^1.126.0"
"aws-cdk.aws-codepipeline-actions" = "^1.127.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
pandas = "^1.3.2"
awswrangler = "^2.11.0"
pyspark = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
