[tool.poetry]
name = "BatchTransformServing"
version = "0.1.0"
description = "Create the feature groups in SageMaker FeatureStore and create a SageMaker pipeline to populate the FG."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
sagemaker = "^2.54.0"
aws-cdk-lib = ">=2.0.0rc1"
constructs = ">=10.0.0"
"aws-cdk.aws-lambda-python-alpha" = "^2.8.0-alpha.0"
"aws-cdk.aws-glue-alpha" = "^2.15.0-alpha.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
pandas = "^1.3.2"
awswrangler = "^2.11.0"
pyspark = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
